@@ -1,3 +1,10 @@
+2005-08-26  Yves Combe  <yves@ycombe.net>
+
+	improve textview tool.
+
+	* src/gcompris/board_config.c: (gcompris_textbuffer_changed),
+	(gcompris_textview_check), (gcompris_textview):
+
 2005-08-26  Yves Combe,,,  <yves@ycombe.net>
 
 	patch by Joe Neeman.
